--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements-frozen.txt
 
     - name: Build documentation
       run: |
@@ -43,7 +43,7 @@ jobs:
         root_file: xtdc4userguide.tex
         latexmk_use_lualatex: true
         working_directory: build/latex
-        # pre_compile: "tlmgr update --self && tlmgr update --all"
+        pre_compile: "tlmgr update --self && tlmgr update --all"
 
     - name: Upload log if latexmk fails
       if: ${{ failure() }}
